refactor: java 11 downgrade on code